[package]
name = "sentinel-agent-lua"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Sentinel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/raskell-io/sentinel-agent-lua"
homepage = "https://sentinel.raskell.io"
documentation = "https://sentinel.raskell.io/docs/agents/lua"
description = "Lua scripting agent for Sentinel reverse proxy - custom logic via Lua scripts"
keywords = ["proxy", "reverse-proxy", "agent", "lua", "scripting"]
categories = ["network-programming"]
readme = "README.md"

[[bin]]
name = "sentinel-lua-agent"
path = "src/main.rs"

[dependencies]
# Sentinel protocol (local path for development)
sentinel-agent-protocol = { path = "../sentinel/crates/agent-protocol" }
sentinel-common = { path = "../sentinel/crates/common" }

# Async runtime
tokio = { version = "1.40", features = ["full", "sync"] }
async-trait = "0.1"

# Lua runtime
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"

# Command line
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3.12"
