[package]
name = "zentinel-agent-lua"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Zentinel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel-agent-lua"
homepage = "https://zentinelproxy.io"
documentation = "https://zentinelproxy.io/docs/agents/lua"
description = "Lua scripting agent for Zentinel reverse proxy - custom logic via Lua scripts"
keywords = ["proxy", "reverse-proxy", "agent", "lua", "scripting"]
categories = ["network-programming"]
readme = "README.md"

[[bin]]
name = "zentinel-lua-agent"
path = "src/main.rs"

[dependencies]
# Zentinel protocol (local path for development)
zentinel-agent-protocol = { path = "../zentinel/crates/agent-protocol" }
zentinel-common = { path = "../zentinel/crates/common" }

# Async runtime
tokio = { version = "1.40", features = ["full", "sync"] }
async-trait = "0.1"

# Lua runtime
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"

# Command line
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3.12"
